// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds views with blocking from block lists > blocks record embeds 1`] = `
{
  "thread": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "embed": {
        "$type": "app.bsky.embed.record#view",
        "record": {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
              "chat": {
                "allowIncoming": "none",
              },
            },
            "did": "user(2)",
            "handle": "dan.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "cid": "cids(3)",
          "embeds": [
            {
              "$type": "app.bsky.embed.record#view",
              "record": {
                "$type": "app.bsky.embed.record#viewBlocked",
                "author": {
                  "did": "user(3)",
                  "viewer": {
                    "blockedBy": false,
                    "blocking": "record(5)",
                  },
                },
                "blocked": true,
                "uri": "record(4)",
              },
            },
          ],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [],
          "likeCount": 0,
          "quoteCount": 1,
          "replyCount": 0,
          "repostCount": 1,
          "uri": "record(3)",
          "value": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": {
              "$type": "app.bsky.embed.record",
              "record": {
                "cid": "cids(4)",
                "uri": "record(4)",
              },
            },
            "facets": [
              {
                "features": [
                  {
                    "$type": "app.bsky.richtext.facet#mention",
                    "did": "user(0)",
                  },
                ],
                "index": {
                  "byteEnd": 18,
                  "byteStart": 0,
                },
              },
            ],
            "text": "@alice.bluesky.xyz is the best",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(0)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(0)",
          "val": "test-label",
        },
      ],
      "likeCount": 2,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.record",
          "record": {
            "cid": "cids(3)",
            "uri": "record(3)",
          },
        },
        "text": "yoohoo label_me",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "threadContext": {},
  },
}
`;

exports[`pds views with blocking from block lists > blocks thread parent 1`] = `
{
  "thread": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "parent": {
      "$type": "app.bsky.feed.defs#blockedPost",
      "author": {
        "did": "user(2)",
        "viewer": {
          "blockedBy": true,
        },
      },
      "blocked": true,
      "uri": "record(4)",
    },
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": {
          "parent": {
            "cid": "cids(3)",
            "uri": "record(4)",
          },
          "root": {
            "cid": "cids(3)",
            "uri": "record(4)",
          },
        },
        "text": "alice replies to dan",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "replies": [],
    "threadContext": {},
  },
}
`;

exports[`pds views with blocking from block lists > blocks thread reply 1`] = `
{
  "thread": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 3,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "like": "record(4)",
        "repost": "record(3)",
        "threadMuted": false,
      },
    },
    "replies": [
      {
        "$type": "app.bsky.feed.defs#blockedPost",
        "author": {
          "did": "user(2)",
          "viewer": {
            "blockedBy": false,
            "blocking": "record(6)",
          },
        },
        "blocked": true,
        "uri": "record(5)",
      },
      {
        "$type": "app.bsky.feed.defs#blockedPost",
        "author": {
          "did": "user(3)",
          "viewer": {
            "blockedBy": false,
            "blocking": "record(6)",
          },
        },
        "blocked": true,
        "uri": "record(7)",
      },
    ],
    "threadContext": {},
  },
}
`;

exports[`pds views with blocking from block lists > returns a users own list blocks 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "lists": [
    {
      "cid": "cids(0)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "muted": false,
        },
      },
      "description": "blah blah",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 0,
      "name": "new list",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(0)",
      "viewer": {
        "blocked": "record(1)",
        "muted": false,
      },
    },
    {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "cid": "cids(3)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "muted": false,
        },
      },
      "description": "big list of blocks",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 3,
      "name": "alice blocks",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(4)",
      "viewer": {
        "blocked": "record(5)",
        "muted": false,
      },
    },
  ],
}
`;

exports[`pds views with blocking from block lists > returns lists associated with a user 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "lists": [
    {
      "cid": "cids(0)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "blah blah",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 0,
      "name": "new list",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(0)",
      "viewer": {
        "muted": false,
      },
    },
    {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "cid": "cids(3)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "big list of blocks",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 3,
      "name": "alice blocks",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(3)",
      "viewer": {
        "blocked": "record(4)",
        "muted": false,
      },
    },
  ],
}
`;

exports[`pds views with blocking from block lists > returns the contents of a list 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "items": [
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "chat": {
            "allowIncoming": "none",
          },
        },
        "did": "user(2)",
        "handle": "dan.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "uri": "record(4)",
    },
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(3)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "blocking": "record(0)",
          "blockingByList": {
            "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)",
            "cid": "cids(0)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": [],
            "listItemCount": 3,
            "name": "alice blocks",
            "purpose": "app.bsky.graph.defs#modlist",
            "uri": "record(0)",
            "viewer": {
              "blocked": "record(1)",
              "muted": false,
            },
          },
          "muted": false,
        },
      },
      "uri": "record(5)",
    },
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "blocking": "record(0)",
          "blockingByList": {
            "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)",
            "cid": "cids(0)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": [],
            "listItemCount": 3,
            "name": "alice blocks",
            "purpose": "app.bsky.graph.defs#modlist",
            "uri": "record(0)",
            "viewer": {
              "blocked": "record(1)",
              "muted": false,
            },
          },
          "muted": false,
        },
      },
      "uri": "record(6)",
    },
  ],
  "list": {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)",
    "cid": "cids(0)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "muted": false,
      },
    },
    "description": "big list of blocks",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 3,
    "name": "alice blocks",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(0)",
    "viewer": {
      "blocked": "record(1)",
      "muted": false,
    },
  },
}
`;
